# AscenderFrameworkMicroservices

./: .gitignore  README.md  __init__.py  context.py  handler.py  pyproject.toml  security_manager.py
_core/: backend_loader.py  consume_executor.py
backends/: rabbitmq.py  redis.py
exceptions/: connections.py  uninitialized.py
guards/: internal.py
microservices/: __init__.py  context.py  handler.py
microservices/_core/: backend_loader.py  consume_executor.py
microservices/backends/: rabbitmq.py
microservices/typehints/: application.py  base.py  types.py
microservices/types/: channels.py  config.py  modules.py
parsers/: consume_handle.py
redis/: engine.py  entitiy.py  riter.py  singleton.py
types/: channels.py  config.py  connections.py  http_response.py  http_waypoint.py
waypoints/: branch.py  context.py  inner_branch.py  instance.py  registry.py  response.py
